# SPRINT

./: .gitignore  07.03 git.md  CMakeLists.txt  LICENSE  README.md  d1.md  hanksdiary.md  heeee.txt  package.xml
Omni/: motor1.py  motor2.py  preset1.json  preset2.json
SHero_turtlebot3/: library.properties
SHero_turtlebot3/examples/turtlebot3_burger/turtlebot3_core/: turtlebot3_core.ino  turtlebot3_core_config.h
SHero_turtlebot3/include/turtlebot3/: turtlebot3.h  turtlebot3_omni_motor_driver.h
SHero_turtlebot3/src/turtlebot3/: turtlebot3_omni_motor_driver.cpp
src/: git summary.md
src/manual/: dynamixel word .docx  git manual.md  pip.docx  turtlebot3 with opencr.docx  word dictionary.docx
src/mokscode/Error_code/: motor1.py  motor2.py  motor3.py  omniworld.py  preset1.json  preset2.json  preset3.json
src/mokscode/code/my_life/: motor1.py  motor2.py  motor3.py  omniworld.py  preset.json
src/mokscode/motorfin/Ori_omni/: allstop.py  motor1.py  motor2.py  motor3.py  omnimaster.py
src/motortest/basic_operation/: my_preset.json  operating.py  position.py  sub.py  torque.py  velocity.py
src/motortest/two_motors/: position_id1.py  position_id2.py  preset_id1.json  preset_id2.json  sub.py
src/teleop_keyboard_omni3/: README.md  package.xml  teleop_keyboard_omni3.py
