<?xml version="1.0"?>
<package>
  <name>teleop_keyboard_omni3</name>
  <version>0.0.0</version>
  <description>Generic keyboard teleoperation for 3 wheeled omnidirectional robots.</description>

  <maintainer email="rngmldud1051997@gmail.com">heely</maintainer>

  <license>BSD</license>

  <url type="website"></url>

  <author>heely</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
